--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  bloc: ^9.0.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
