--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 
 dependencies:
   bloc: ^9.0.0
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_secure_storage: ^9.2.4
   http: ^1.4.0
 
 dev_dependencies:
